done with feedback page and results page ;)

--- a/results.html
+++ b/results.html
@@ -47,9 +47,16 @@
         </a>
     </nav>
 
-   <h1>thnaks for the feedback!</h1>
-   <h1>we will try to make improvements to the site ASAP</h1>
-   
+    <section class="results">
+
+        <h3 class="headings"> thanks for the feedback!</h3>
+
+        <h2>we really appreciate it!</h2>
+
+        <button onclick="window.location.href='index.html'" class="altButton">back to home page</button>
+
+    </section>
+
 
     <footer class="footer">
         <h2>made with &#x1F49A; by V0RT3X - 2021</h2>
