--- a/feedback.html
+++ b/feedback.html
@@ -62,7 +62,7 @@
             <div class="feedback__form__part">
                 <label for="name"> your name</label>
                 <br>
-                <input type="text" name="name" id="name" placeholder="name">
+                <input type="text" maxlength="20" name="name" id="name" placeholder="name">
             </div>
 
             <div class="feedback__form__part">
@@ -73,11 +73,11 @@
 
             <div class="alt__feedback__form__part">
                 <h2>where can we improve?</h2>
-                <input type="checkbox" name="improveOne" id="improveOne">
+                <input type="checkbox" class="checkk" name="improveCheck" id="improveOne">
                 <label for="improveOne">user interface</label><br>
-                <input type="checkbox" name="improveTwo" id="improveTwo">
+                <input type="checkbox" class="checkk" name="improveCheck" id="improveTwo">
                 <label for="improveTwo">more resources!!!</label><br>
-                <input type="checkbox" name="improveThree" id="improveThree">
+                <input type="checkbox" class="checkk" name="improveCheck" id="improveThree">
                 <label for="improveThree">more convenient experience</label><br>
             </div>
 
@@ -85,20 +85,26 @@
             <div class="alt__feedback__form__part">
                 <h2>would you recommend myMaths to anyone?</h2>
                 <br>
-                <input type="radio" name="recOne" id="recOne">
+                <input type="radio" class="radioo" name="recommend" id="recOne">
                 <label for="recOne">yasssss</label><br>
-                <input type="radio" name="recTwo" id="recTwo">
+                <input type="radio" class="radioo" name="recommend" id="recTwo">
                 <label for="recTwo">nah</label><br>
+                <input type="radio" class="radioo" name="recommend" id="recThree">
+                <label for="recThree">maybe</label><br>
             </div>
 
-            <div class="feedback__form__part">
+            <div class="alt__alt__feedback__form__part">
                 <label for="message">your message</label>
                 <br>
-                <input type="text" name="message" id="message" placeholder="message">
+                <textarea name="message" rows="7" name="message" id="message" placeholder="message"></textarea>
             </div>
 
-            <button type="reset">reset</button>
-            <button type="submit">submit</button>
+            <div class="feedback__buttons">
+                <input type="reset" value="reset">
+                <input type="submit" value="submit">
+            </div>
+
+
         </form>
     </section>
 
