--- a/index.html
+++ b/index.html
@@ -12,6 +12,40 @@
 
 <body>
 
+    <nav>
+        <a href="index.html" class="nav__home__link">
+            <img src="assets/logos/SVG/Dark logo.svg" alt="logo" />
+            <h1>myMaths</h1>
+        </a>
+
+        <div class="nav-links" id="nav-links">
+            <button onclick="hideMenu()" class="hamburger-button">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                    <path d="M24 20.188l-8.315-8.209 8.2-8.282-3.697-3.697-8.212 8.318-8.31-8.203-3.666 3.666 8.321 8.24-8.206 8.313 3.666 3.666 8.237-8.318 8.285 8.203z" />
+                </svg>
+            </button>
+
+            <ul>
+                <li>
+                    <a href="index.html" id="current-page"> &#x1F3E0; home</a>
+                </li>
+                <li>
+                    <a href=" calc.html"> &#x1F440; resources</a>
+                </li>
+                <li>
+                    <a href="feedback.html"> &#x1F914; give feedback</a>
+                </li>
+            </ul>
+        </div>
+        <button onclick="showMenu()" class="hamburger-alt-button">
+            <svg viewBox="0 0 100 80" width="40" height="40">
+                <rect width="100" height="20"></rect>
+                <rect y="30" width="100" height="20"></rect>
+                <rect y="60" width="100" height="20"></rect>
+            </svg>
+        </button>
+    </nav>
+    <!--
     <div id="hamburger" class="hamburger">
 
         <button onclick="hideMenu()" class="hamburger-button">
@@ -26,7 +60,6 @@
             <a class="button" href="feedback.html"> &#x1F914; give feedback</a>
         </div>
     </div>
-
 
     <nav class="navbar">
         <div class="nav__child1">
@@ -47,7 +80,7 @@
             </div>
         </a>
     </nav>
-
+-->
     <section class="main">
         <div class="main-h">
             <p class="mpOne">online maths calculator for south african students</p>
