--- a/index.html
+++ b/index.html
@@ -18,7 +18,26 @@
             <h1>myMaths</h1>
         </a>
 
-        <div class="nav-links" id="nav-links">
+        <div id="nav-links">
+            <button onclick="hideMenu()" class="hamburger-button">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                    <path d="M24 20.188l-8.315-8.209 8.2-8.282-3.697-3.697-8.212 8.318-8.31-8.203-3.666 3.666 8.321 8.24-8.206 8.313 3.666 3.666 8.237-8.318 8.285 8.203z" />
+                </svg>
+            </button>
+
+            <ul>
+                <li>
+                    <a href="index.html" id="current-page"> &#x1F3E0; home</a>
+                </li>
+                <li>
+                    <a href=" calc.html"> &#x1F440; resources</a>
+                </li>
+                <li>
+                    <a href="feedback.html"> &#x1F914; give feedback</a>
+                </li>
+            </ul>
+        </div>
+        <div id="alt-nav-links">
             <button onclick="hideMenu()" class="hamburger-button">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
                     <path d="M24 20.188l-8.315-8.209 8.2-8.282-3.697-3.697-8.212 8.318-8.31-8.203-3.666 3.666 8.321 8.24-8.206 8.313 3.666 3.666 8.237-8.318 8.285 8.203z" />
