--- a/results.html
+++ b/results.html
@@ -22,7 +22,7 @@
 
         <div class="hamb-a">
             <a href="index.html" class="button"> &#x1F3E0; home</a>
-            <a class="button" href="calc.html"> &#x1F440; resources</a>
+            <a class="button" href="resources.html"> &#x1F440; resources</a>
             <a class="button" href="feedback.html"> &#x1F914; give feedback</a>
         </div>
     </div>
