--- a/feedback.html
+++ b/feedback.html
@@ -29,7 +29,7 @@
                     <a href="index.html" id="current-page"> &#x1F3E0; home</a>
                 </li>
                 <li>
-                    <a href=" calc.html"> &#x1F440; resources</a>
+                    <a href=" resources.html"> &#x1F440; resources</a>
                 </li>
                 <li>
                     <a href="feedback.html"> &#x1F914; give feedback</a>
@@ -48,7 +48,7 @@
                     <a href="index.html" id="current-page"> &#x1F3E0; home</a>
                 </li>
                 <li>
-                    <a href=" calc.html"> &#x1F440; resources</a>
+                    <a href=" resources.html"> &#x1F440; resources</a>
                 </li>
                 <li>
                     <a href="feedback.html"> &#x1F914; give feedback</a>
