--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <a href="index.html" id="current-page"> &#x1F3E0; home</a>
                 </li>
                 <li>
-                    <a href=" calc.html"> &#x1F440; resources</a>
+                    <a href=" resources.html"> &#x1F440; resources</a>
                 </li>
                 <li>
                     <a href="feedback.html"> &#x1F914; give feedback</a>
@@ -49,7 +49,7 @@
                     <a href="index.html" id="current-page"> &#x1F3E0; home</a>
                 </li>
                 <li>
-                    <a href=" calc.html"> &#x1F440; resources</a>
+                    <a href=" resources.html"> &#x1F440; resources</a>
                 </li>
                 <li>
                     <a href="feedback.html"> &#x1F914; give feedback</a>
@@ -67,12 +67,12 @@
 
     <section class="main">
         <div class="main-h">
-            <p class="mpOne">online maths calculator for south african students</p>
+            <p class="mpOne">online resources south african students</p>
             <p class="mpS">go from . . .</p>
             <img class="mGif" src="assets/images/confused-math.gif" alt="confused?" />
             <p class="mpS">to . . .</p>
             <img class="mImg" src="assets/images/moneymath.svg" alt="" />
-            <a class="mButton" href="calc.html">calculate now . . .</a>
+            <a class="mButton" href="resources.html">find resources here . . .</a>
         </div>
     </section>
 
