testing implementation of PDFs

--- a/resources.html
+++ b/resources.html
@@ -71,6 +71,8 @@
         <button id="g10button" class="button grade__button">grade 10</button>
 
         <button id="g11button" class="button grade__button">grade 11</button>
+
+	<a href="assets/the.pdf">The PDF</a>
     </section>
 
     <section id="grade10">
